# OneGunSFML

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/textures/: credit.txt
src/main/: main.cpp  pch.hpp
src/main/actors/: background.cpp  background.hpp  enemy.cpp  enemy.hpp  explosion.cpp  explosion.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp
src/main/components/: animation.hpp  collidable.cpp  collidable.hpp  components.hpp  lifetime.hpp  mechanics.hpp  renderable.hpp  transformation.hpp  weapon.cpp  weapon.hpp
src/main/entities/: background.cpp  background.hpp  detector.cpp  detector.hpp  enemy.cpp  enemy.hpp  enemy_types.cpp  enemy_types.hpp  entity.cpp  entity.hpp  explosion.cpp  explosion.hpp  explosion_types.cpp  explosion_types.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  projectile_types.cpp  projectile_types.hpp  weapon.cpp  weapon.hpp
src/main/entities/enemies/: asteroid.cpp  bombardier.cpp  bomber.cpp  comet.cpp  drone.cpp  fighter.cpp  galaxis.cpp  hugeasteroid.cpp  hunter.cpp  largeasteroid.cpp
src/main/entities/explosions/: asteroiddeath.cpp  bomb.cpp  bombardierdeath.cpp  bomberdeath.cpp  bullethit.cpp  burnhit.cpp  cometdeath.cpp  dronedeath.cpp  fighterdeath.cpp  galaxisdeath.cpp  hunterdeath.cpp  icehit.cpp  laserhit.cpp  missile.cpp  playerdeath.cpp  prebomb.cpp
src/main/entities/explosions/visual_only/: asteroiddeath.cpp  bullethit.cpp  burnhit.cpp  laserhit.cpp
src/main/entities/projectiles/: bomb.cpp  bullet.cpp  ice.cpp  laser.cpp  missile.cpp  plasma.cpp
src/main/system/: components.hpp  constants.hpp  onegungame.cpp  onegungame.hpp  random.hpp
src/main/systems/: animations.cpp  collisions.cpp  components.hpp  constants.hpp  deaths.cpp  movement.cpp  onegungame.cpp  onegungame.hpp  randomgenerator.hpp  rendering.cpp  setup.cpp
src/main/utils/: math.hpp
